# secdogie

./: .gitattributes  LICENSE  README.md  SECURITY.md  TUTORIAL.md  install.ps1  install.sh  ruff.toml
.github/workflows/: release.yml  test.yml
agent/: .gitignore  README.md  pyproject.toml  skills.example.json
agent/packaging/: README.md  build.bat  build.ps1  build.sh  entry.py  secdogie-agent.spec
agent/packaging/launchers/: menu.ps1  open.bat  open.command  run.sh
agent/secdogie_agent/: actions.py  axtree.py  backend.py  cli.py  cli_common.py  config.py  desktop_ax.py  dialog.py  dpi.py  elements.py  frozen_runtime.py  launcher_menu.py  loop.py  macro.py  memory.py  osfocus.py  plan.py  reflex.py  safety.py  screen.py  skill.py  skill_runner.py  trace.py
agent/secdogie_agent/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  prompts.py
agent/tests/: test_actions.py  test_axtree.py  test_config.py  test_dpi.py  test_elements.py  test_frozen_runtime.py  test_gui.py  test_launcher_menu.py  test_loop.py  test_macro.py  test_memory.py  test_osfocus.py  test_plan.py  test_provider_base.py  test_provider_openai.py  test_provider_routing.py  test_reflex.py  test_screen.py  test_skill.py  test_skill_runner.py  test_trace.py
aim/: README.md  pyproject.toml
aim/secdogie_aim/: __init__.py  cli.py  controller.py  mouse.py  yolo.py
aim/tests/: test_cli.py  test_controller.py  test_mouse.py
android/: README.md  pyproject.toml
android/packaging/: build.ps1  build.sh  entry.py  secdogie-android.spec
android/secdogie_android/: adb.py  backend.py  cli.py  uitree.py
android/tests/: test_adb.py  test_backend.py  test_integration.py  test_uitree.py
carjack/: .gitignore  README.md  pyproject.toml
carjack/secdogie_carjack/: __init__.py  approach.py  cli.py
carjack/tests/: test_approach.py
commander/: README.md  pyproject.toml
commander/secdogie_commander/: __init__.py  cli.py  tactician.py  wiring.py
commander/tests/: test_cli.py  test_command.py  test_tactician.py
docs/: RELEASING.md  index.html
gta/: README.md  pyproject.toml
gta/secdogie_gta/: __init__.py  bridge.py  cli.py  driving.py  protocol.py
gta/tests/: test_driving.py  test_protocol.py
handoff/: README.md  pyproject.toml
handoff/secdogie_handoff/: __init__.py  arbiter.py
handoff/tests/: test_arbiter.py
ios/: README.md  pyproject.toml
ios/packaging/: build.ps1  build.sh  entry.py  secdogie-ios.spec
ios/secdogie_ios/: backend.py  cli.py  wda.py
ios/tests/: test_backend.py  test_integration.py  test_wda.py
open/: README.md  pyproject.toml
open/packaging/: build.ps1  build.sh  entry.py  secdogie-open.spec
open/secdogie_open/: cli.py  controller.py  gui.py  runner.py  server.py  windows.py
open/secdogie_open/webui/: app.js  index.html  style.css
open/tests/: test_controller.py  test_runner.py  test_server.py  test_windows.py
scene3d/: README.md  pyproject.toml
scene3d/packaging/: build.ps1  build.sh  entry.py  secdogie-scene3d.spec
scene3d/secdogie_scene3d/: aggregate.py  analyze.py  cli.py  model.py  perceive.py  perceive_cli.py  pipeline.py  tiles.py  views.py
scene3d/tests/: conftest.py  test_aggregate.py  test_analyze.py  test_cli.py  test_model.py  test_perceive.py  test_pipeline.py  test_tiles.py  test_views.py
tunnel/: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md
tunnel/include/: config.h  crypto.h  data.h  handshake.h  hub.h  net.h  sdtp.h  tun.h  util.h
tunnel/src/: config.c  crypto.c  data.c  handshake.c  hub.c  hub_route.c  main.c  net.c  tun.c  util.c
tunnel/tests/: bench_recv.c  fuzz_packets.c  test_protocol.c
