[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "secdogie-agent"
version = "0.1.0"
description = "Vision-LLM computer-control agent: plug in an API key, it drives your mouse/keyboard toward a stated task."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "pillow>=10.0.0",
]

[project.scripts]
secdogie-agent = "secdogie_agent.cli:main"

[tool.setuptools.packages.find]
include = ["secdogie_agent*"]
