[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "secdogie-agent"
version = "0.1.0"
description = "Vision-LLM computer-control agent: plug in an API key, it drives your mouse/keyboard toward a stated task."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "pillow>=10.0.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
# The OpenAI provider is opt-in so the default install stays lean; the CLI
# prints an install hint if you point it at a gpt-* model without it.
openai = ["openai>=1.0.0"]
# The local reflex layer (secdogie_agent/reflex.py) needs numpy for its fast
# FFT template matching; nothing else does, so it stays optional.
reflex = ["numpy>=1.21"]
# Desktop accessibility ("--desktop-ax"): element-aware desktop control reads the
# OS accessibility tree. The reader is platform-specific and opt-in. Linux's
# pyatspi is a system package (e.g. `apt install python3-pyatspi`), so only the
# pip-installable readers live here; macOS additionally needs the host app
# granted Accessibility permission at runtime.
windows-ax = ["uiautomation>=2.0"]
macos-ax = ["pyobjc-framework-ApplicationServices>=9.0"]

[project.scripts]
secdogie-agent = "secdogie_agent.cli:main"

[tool.setuptools.packages.find]
include = ["secdogie_agent*"]
